testsuite/tests/builtins/list_methods/sublist/non_int_high/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(l.sublist(1, "Not an int"))
   │       ─────────────┬────────────  
   │                    ╰────────────── Expecting a "Int" for the parameter "high", got a "Str"
───╯
